--- a/bibliography.bib
+++ b/bibliography.bib
@@ -2,7 +2,7 @@
     author = {Hamm, Steve},
     title = {{How Big Data Can Boost Weather Forecasting}},
     year = 2013,
-    howpublished = {\url{hhttp://readwrite.com/2013/02/28/how-big-data-can-boost-weather-forecasting}}
+    howpublished = {\url{http://readwrite.com/2013/02/28/how-big-data-can-boost-weather-forecasting}}
 }
 @misc {climatedgeurl,
     howpublished = "\url{http://www.csc.com/public_sector/offerings/59474/82693-climatedge_risk_sector_reports}",
