--- a/index.tex
+++ b/index.tex
@@ -44,7 +44,7 @@
 \fancyhead{}
 \renewcommand{\headrulewidth}{0pt}
 \fancyfoot{}
-\fancyfoot[LO,RE]{\small\textit{\textsc{CSC} Confidential. For Internal Distribution Only.}}
+%\fancyfoot[LO,RE]{\small\textit{\textsc{CSC} Confidential. For Internal Distribution Only.}}
 \fancyfoot[LE,RO]{\thepage}
 
 \DeclareMathSizes{10}{18}{12}{8}
