add hardcoded date for future printings

--- a/title.tex
+++ b/title.tex
@@ -4,8 +4,9 @@
     \begin{center}
         \textbf{\Large Christopher Keller}\\[1cm]
         \textit{A Big Data Approach To ClimatEdge\texttrademark{}}\\ [.5cm]
-         CSC NPS Solution Leadership Institute\\ [.5cm]
-        \today
+        CSC NPS Solution Leadership Institute\\ [.5cm]
+        %\today
+        April 23, 2013
     \end{center}
     \vspace*{\fill}
 \end{titlepage}
