changes based on editorial reviews from CSC

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -56,7 +56,7 @@
     author = {CSC},
     title = {{POINT IN Development}},
     year = 2013,
-    howpublished = {\url{https://c3.csc.com/groups/point-in-developmen?view=over}}
+    howpublished = {CSC C3}
 }
 @misc{exceed,
     author = {CSC},
