--- a/title.tex
+++ b/title.tex
@@ -1,12 +1,19 @@
 %!TEX root=index.tex
+\fancypagestyle{firststyle}
+{
+    \fancyhf{}
+    \fancyfoot[L]{\small{Copyright \copyright~2014 Computer Sciences Corporation. All rights reserved}}
+}
 \begin{titlepage}
     \vspace*{\fill}
     \begin{center}
-        \textbf{\Large Christopher Keller}\\[1cm]
-        \textit{A Big Data Approach To ClimatEdge\texttrademark{}}\\ [.5cm]
-        CSC NPS Solution Leadership Institute\\ [.5cm]
-        %\today
-        March 28, 2014
+        \textbf{\textit{\Large A Big Data Approach To ClimatEdge}}\\ [.5cm]
+        \textbf{Christopher Keller}\\[.25cm]
+        CSC\\[.25cm]
+        ckeller22@csc.com\\[.25cm]
+        CSC Papers\\[.25cm]
+        2014\\
     \end{center}
     \vspace*{\fill}
+    \thispagestyle{firststyle}
 \end{titlepage}
